--- a/src/css/components/datatable.css
+++ b/src/css/components/datatable.css
@@ -8,7 +8,7 @@
      ============================================= */
 
   .datatable {
-    @apply flex flex-col w-full rounded-2xl overflow-hidden;
+    @apply flex flex-col w-full rounded-2xl;
     background-color: var(--color-base-100);
   }
 
